[metadata]
name = entry_point_iter_example
description = list entry points and its file path
author = wangyuchang
author_email = wangyuchang@yuchang.name

[options]
packages = 
    entry_point_iter_example

[options.entry_points]
entry_points_iter =
    iter1 = entry_point_iter_example.task1
    iter2 = entry_point_iter_example.task2
    iter3 = entry_point_iter_example.task3

console_scripts:
    iter_entry_points = entry_point_iter_example.cli.cmd:main
